# goida_lang

./: .gitignore  Cargo.toml  README.md  runtime_benchmark.goida
cli/: Cargo.toml  build.rs
cli/src/: main.rs  package.rs
core/: Cargo.toml
core/src/: ffi.rs  formatter.rs  grammar.pest  import_paths.rs  lib.rs  session.rs  shared.rs
core/src/ast/: arena.rs  class.rs  expr.rs  mod.rs  prelude.rs  program.rs  source.rs  span.rs  stmt.rs  types.rs
core/src/builtins/: array.rs  bool.rs  catalog.rs  common.rs  datetime.rs  dict.rs  file.rs  float.rs  io.rs  iterator.rs  json.rs  list.rs  macros.rs  mod.rs  number.rs  regex.rs  registry.rs  registry_declarations.rs  request.rs  response.rs  system.rs  terminal.rs  text.rs  thread.rs
core/src/interpreter/: classes.rs  core.rs  environment.rs  expressions.rs  functions.rs  mod.rs  native.rs  operations.rs  statements.rs  structs.rs
core/src/macro/: mod.rs
core/src/parser/: builder.rs  builtin_errors.rs  declarations.rs  expressions.rs  grammar.lalrpop  imports.rs  lexer.rs  macro_expander.rs  mod.rs  parser.rs  prelude.rs  statements.rs  structs.rs  syntax.rs  utils.rs  validation.rs
core/src/traits/: builtins.rs  core.rs  expression.rs  functions.rs  json.rs  mod.rs  module.rs  prelude.rs  statement.rs  value.rs
goida-runtime/: Cargo.toml
goida-runtime/src/: lib.rs  session.rs  shared.rs
goida-runtime/src/builtins/: array.rs  common.rs  datetime.rs  dict.rs  file.rs  iterator.rs  list.rs  mod.rs  number.rs  regex.rs  registry.rs  system.rs  terminal.rs  text.rs  thread.rs
goida-runtime/src/interpreter/: classes.rs  engine.rs  environment.rs  functions.rs  heap.rs  mod.rs  native.rs  native_support.rs  native_types.rs  objects.rs  operations.rs  runtime.rs  structs.rs
goida-runtime/src/macro/: mod.rs
goida-runtime/src/parser/: builder.rs  formatter.rs  grammar.lalrpop  imports.rs  lexer.rs  macro_expander.rs  mod.rs  parser.rs  parser_tests.rs  structs.rs  syntax.rs  validation.rs
goida-runtime/src/traits/: builtins.rs  classes.rs  functions.rs  json.rs  mod.rs  module.rs  prelude.rs  runtime.rs  value.rs
goida-runtime/src/vm/: mod.rs  (+1 more)
(+215 files in other folders)
