[package]
name = "goida_core"
version = "0.1.0"
edition = "2021"

[dependencies]
string-interner = "0.19.0"
lalrpop-util = "0.22.2"
logos = "0.15.1"
ariadne = { version = "0.6.0" }
lazy_static = "1.5.0"
chrono = "0.4.43"
serde_json = "1.0.149"
libloading = "0.9.0"
libffi = "5.1.0"
regex = "1.12.2"

[build-dependencies]
lalrpop = "0.22.2"
