[package]
name = "goida-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
goida-model = { path = "../goida-model" }
goida-syntax = { path = "../goida-syntax" }
goida-hir = { path = "../goida-hir" }
goida-bytecode = { path = "../goida-bytecode" }
string-interner = "0.19.0"
lalrpop-util = "0.22.2"
logos = "0.15.1"
ariadne = { version = "0.6.0" }
chrono = "0.4.43"
serde_json = "1.0.149"
libloading = "0.9.0"
libffi = "5.1.0"
regex = "1.12.2"

[build-dependencies]
lalrpop = "0.22.2"
